Version 1.9.13+svn:
 * Editor:
   * Fixed overpainting of transparent tile icons on the editor palettes on the
     sidebar
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Czech, Dutch, French, Latin,
     Serbian
 * WML engine:
   * Fix store_unit clearing the used variable before its filter can reference it
     (bug #19203)
   * Check for argument image file existence before creating a MASK or
     BLIT image mod (bug #19208)
 * Miscellaneous and bug fixes:
   * Fixed bug #19032: Poison and level up AI defense placement calculation

Version 1.9.13:
 * Campaigns:
   * Northern Rebirth:
     * Infested Caves: integrated sighted events with moveto events
     * To the Mines: fixed Hamel not having the hero overlay
     * Clearing the Mines: fixed Dwarves recruitment not being disallowed upon
       winning
     * The Pursuit: integrated a sighted event with moveto event
     * The Pursuit: replaced another sighted event with ON_SIGHTING
     * Elvish Princess: fixed Ro'Arthian and Ro'Sothian not having the hero
       overlay
     * Introductions: used ON_SIGHTING instead of sighted event
     * Stolen Gold: gave Krash the expendable leader overlay
     * Stolen Gold: fixed one of the two loyal Drakes having two IDs
     * Stolen Gold: fixed Hidel missing his portrait
     * Get the Gold: gave Eryssa the expendable leader overlay
     * The Eastern Flank: made the Gryphon fly away and then return
     * Showdown: removed hero overlay from Ro'Arthian and Ro'Sothian when they
       are leaders
     * Showdown: fixed Hamel's death not causing defeat
     * Epilogue: fixed music not being played
   * Eastern Invasion:
     * The Escape Tunnel: integrated sighted event with moveto event
     * Captured: integrated a sighted event with moveto event
     * Weldyn Besieged: fixed a typo in Konrad's last breath event
   * Sceptre of Fire:
     * Caverns of Flame: integrated a sighted event with moveto event
   * Son of the Black Eye: