@@ -2,6 +2,8 @@ Version 1.9.13+svn:
  * Editor:
    * Fixed overpainting of transparent tile icons on the editor palettes on the
      sidebar
+   * Fixed terrain palette shrinking to the size of small categories when
+     switching maps
  * Language and i18n:
    * Updated translations: Chinese (Simplified), Czech, Dutch, French, Latin,
      Serbian
